--- a/projects/angular-tradingview-widget/package.json
+++ b/projects/angular-tradingview-widget/package.json
@@ -1,6 +1,22 @@
 {
   "name": "angular-tradingview-widget",
   "version": "0.0.1",
+  "description": "Angular component for rendering the TradingView Advanced Real-Time Chart Widget",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mostafizur044/angular-tradingview-widget"
+  },
+  "author": "Md Mostafizur Rahman",
+  "bugs": {
+    "url": "https://github.com/mostafizur044/angular-tradingview-widget/issues"
+  },
+  "license": "MIT",
+  "keywords": [
+    "tradingview",
+    "tradingview widget",
+    "tradingview widget angular",
+    "angular tradingview"
+  ],
   "peerDependencies": {
     "@angular/common": "^9.0.7",
     "@angular/core": "^9.0.7",
